# hr-bot-rep

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
bot/: Dockerfile  docker-compose.yml  requirements.txt
bot/app/: config.py  main.py
bot/app/bot/: bot.py
bot/app/bot/keyboards/: inline.py  reply.py
bot/app/bot/middlewares/: auth.py
bot/app/bot/routers/: candidate_approval.py  commands.py  interview_feedback.py  registration.py  request_exit_reminders.py
bot/app/mail/: __init__.py  sender.py
bot/app/utils/: enums.py  helpers.py  telegram.py
bot/nginx/: nginx.conf
db/: __init__.py  pyproject.toml
db/db/: __init__.py  models.py  repository.py  session.py
docs/: README.md  data-model.md  project-overview.md  setup.md
docs/examples/: HR база данных.xlsx
integrations/: __init__.py  client.py  config.py
sheet_sync/: Dockerfile  requirements.txt  run.py
utils/: dates.py  telegram.py
webApp/: Dockerfile  requirements.txt
webApp/app/: config.py
webApp/app/api/: routes.py  telegram_auth.py  utils.py  webapp.py
webApp/app/api/static/css/: styles.css
webApp/app/api/static/js/: admin-dashboard.js  admin.js  api.js  app.js  bottom-nav.js  candidates.js  faq.js  my-requests.js  telegram-webapp.js  theme.js
webApp/app/api/templates/: index.html
